@@ -1,4 +1,4 @@
-;; $Header: /repo/cvs.copy/eli/fi-build.el,v 2.1 1994/12/21 22:36:11 smh Exp $
+;; $Id: fi-build.el,v 2.2 1996/08/01 22:35:34 layer Exp $
 ;; This file can be loaded at emacs build time to have the emacs-lisp
 ;; interface preloaded into the image.
 
